# srt2shp

./: .gitignore  README.md  demo.SRT  pyproject.toml  requirements.txt  srt2shp.py  srtConvert.py
srt/: __init__.py  srt2shp.py
