[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "srt2shp"
version = "0.0.1"
authors = [
  { name="Eric Callahan"},
]
description = "Parses SRT files produced by DJI drones when recording video.  Converts data into an excel spreadsheet and ESRI shapefiles (Points and Lines)."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies=[
  'pandas==1.4.3', 
  'pyshp==2.1.3',
  'openpyxl==3.0.10'
]